# Sakhi-AI-BACKEND-

./: .env.example  .gitignore  DEPLOYMENT.md  IMPLEMENTATION.md  README.md  pyproject.toml  requirements.txt  update_landing_nav.ps1
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/api/: __init__.py  dependencies.py  router.py
app/api/v1/endpoints/: __init__.py  admin.py  analytics.py  auth.py  conversations.py  health.py  lessons.py  notifications.py  openapi.py  progress.py  ws.py
app/core/: cache.py  config.py  logging.py  middleware.py  security.py  token_blacklist.py  websocket_manager.py
app/db/: __init__.py  ai_store.py  analytics_store.py  auth_store.py  lesson_store.py  notification_store.py  progress_store.py
app/schemas/: __init__.py  ai.py  analytics.py  auth.py  lesson.py  notification.py  progress.py
app/services/: __init__.py  ai.py  ai_providers.py  analytics.py  auth.py  email.py  lessons.py  notifications.py  progress.py
tests/: __init__.py  conftest.py  test_admin_stats.py  test_ai_providers.py  test_analytics.py  test_auth.py  test_cache_backend.py  test_cached_services.py  test_conversations.py  test_email_notifications.py  test_health.py  test_lessons.py  test_lessons_extended.py  test_logout_and_account.py  test_middleware.py  test_notifications.py  test_notifications_extended.py  test_openapi_export.py  test_pagination.py  test_password_change.py  test_progress.py  test_redis_token_blacklist.py  test_websocket.py
